# sdk-py

./: .cibuildwheel.toml  .env.example  .gitignore  Makefile  README.md  custom_commands.py  go.mod  go.sum  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  distribution-test.yml  release-build.yml
bindings/: bindings.go  maa.go  maa_decode_test.go  signer_test.go
docs/: api-reference.md
examples/: README.md  investigate_corrupted_hashes.py  main.py
examples/attestation/: README.md  main.py
examples/bridging/: README.md  TrufBridge.json  deposit_tt.py  withdraw_and_claim.py
examples/bulk_insert_example/: README.md  main.py
examples/complex_example/: README.md  main.py
examples/custom_procedure_example/: README.md  main.py
examples/custom_procedure_with_prefix_example/: README.md  main.py
examples/decode_market_example/: main.py
examples/history_example/: main.py
examples/indexer/: query_indexer.py
examples/local_actions_example/: README.md  main.py
examples/lp_rewards/: main.py
examples/maa_lifecycle_example/: .env.example  README.md  main.py
examples/order_book/: 01_create_market.py  02_place_orders.py  03_take_orders.py  04_verify_state.py  05_run_market_demo.py  05_verify_pnl.py  06_check_lp_rewards.py  06_verify_rewards.py  README.md
examples/revision_backfill_example/: README.md  main.py
examples/transaction_lifecycle_example/: README.md  main.py
src/trufnetwork_sdk_py/: __init__.py  bulk_inserter.py  client.py  utils.py
src/tsn_sdk/: client.py  utils.py
tests/: conftest.py  test_allow_zeros.py  test_attestation.py  test_attestation_integration.py  test_attestation_parsing.py  test_batch_operations.py  test_bulk_inserter.py  test_cache_support.py  test_list_streams.py  test_local_client.py  test_maa.py  test_maa_exec.py  test_market_decoding.py  test_order_book.py  test_permissions.py  test_portfolio_by_wallet.py  test_procedure.py  test_role_management.py  test_sequential_inserts.py  test_tnclient.py  test_transaction_ledger.py
tests/distribution/: Dockerfile.get_account  get_account_test.py  test-distribution.sh
tests/fixtures/: test_trufnetwork.py
tests/helpers/: __init__.py  permissions.py  skips.py
tsn_sdk/: client.py  utils.py
