[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=6.2", "pybindgen"]
build-backend = "setuptools.build_meta"

[project]
name = "tsn_sdk_py"
version = "0.1.0"
description = "A Python SDK for TSN"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/truflation/tsn-sdk-py"

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

package-data = { "*" = ["*.so", "*.dll"] }
