[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=6.2", "pybindgen"]
build-backend = "setuptools.build_meta"

[project]
name = "trufnetwork_sdk_py"
version = "0.1.0"
description = "A Python SDK for Truf Network"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trufnetwork/sdk-py"

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

package-data = { "*" = ["*.so", "*.dll"] }
