[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=6.2", "pybindgen"]
build-backend = "setuptools.build_meta"

[project]
name = "trufnetwork_sdk_py"
version = "0.1.0"
description = "A Python SDK for Truf Network"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "requests>=2.31.0",
    "pybindgen",
    "python-dotenv",
    "eth_account>=0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/trufnetwork/sdk-py"

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true
package-data = { "*" = ["*.so", "*.dll", "*.dylib"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
