[metadata]
name = tsn_sdk_py
version = 0.1.0
description = A Python SDK for TSN
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pybindgen
packages = find:
package_dir =
    = tsn_sdk
include_package_data = True

[options.packages.find]
where = tsn_sdk

[options.package_data]
* =
    *.so
    *.dll
