[metadata]
name = tsn_sdk
version = 0.1.0
description = A Python SDK for TSN
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pybindgen

package_dir =
     =src
packages = find:

[options.packages.find]
where=src

[options.package_data]
* =
    *.so
    *.dll
